--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
     "bootstrap-social": "^5.1.1",
+    "cross-fetch": "^3.1.4",
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-animation-components": "^3.0.0",
     "react-dom": "^17.0.2",
     "react-popper": "^2.2.5",
     "react-redux": "^5.0.7",
     "react-redux-form": "^1.16.8",
     "react-router-dom": "^4.2.2",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^1.2.1",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
